# zoros

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.whisper  ENVIRONMENT_SETUP.md  GEMINI.md  README.md  agent.py  docker-compose.yml  fastapi_stub.py  logging_config.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_backend_fixes.py  test_intake_window_basic.py  test_threading_integration.py  test_ui_reset_fix.py  tsconfig.json
assets/: style_dark.qss  theme_tokens.json
backend/: app.py  db.py  error_handler.py
coder-env/: requirements.txt
docs/: ENV_SETUP.md
githooks/: pre-merge-commit
packaging/: pyinstaller.spec
prompts/: expanded.txt  gist.txt  source.txt  ultra.txt
scripts/: __init__.py  analyze_transcription_performance.py  audio_file_manager.py  benchmark_optimized_dictation.py  benchmark_streaming_backends.py  benchmark_streaming_performance.py  build_executable.py  check_circular_imports.py  debug_streaming_performance.py  demo_live_transcription_gains.py  diagnose_semaphore_leaks.py  feature_tour_to_json.py  live_transcription_simulator.py  run_performance_tests.py  standalone_performance_analysis.py  test_audio_devices.py  test_backend_registration.py  test_live_integration.py  test_long_recording_performance.py  test_realtime_simple.py  test_realtime_streaming.py  test_streaming_transcription.py  test_threading_fix.py  test_user_experience.py  verify_audio_links.py  verify_live_features.py  whisper_service.py  zoros_cli.py
source/: __init__.py  (+3 more)
(+296 files in other folders)
